--- a/public/404.html
+++ b/public/404.html
@@ -36,6 +36,9 @@
       margin-bottom: 8px;
       display: inline-block;
     }
+    a {
+      text-decoration: none;
+    }
   </style>
 </head>
 
@@ -47,7 +50,7 @@
     <div class="error-text">
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
-      <a class='btn button-sm'>Go back home</a>
+      <a class='btn button-sm' href="/">Go back home</a>
     </div>
   </div>
 </body>
